新增web ssh 登录配置与socket分离功能
